Quorum3/Library/Tests/Templating/Pass/PassBooleanTakesText_14.quorum
class Main
    action Main
        Test<text> something
        something:doSomething(true)
    end
end