Quorum3/Library/Tests/Templating/Fail/PassTextTakesInteger_3.quorum
class main
    action main
        Test<integer> something
        something:doSomething("text")
    end
end